gen/24.2/properties/output/pages/cluster-properties.adoc
= Cluster Configuration Properties 
:description: Cluster configuration properties list. 

Cluster configuration properties are the same for all brokers in a cluster. They can be set at the cluster level.

For information on how to edit cluster properties, see xref:manage:cluster-maintenance/cluster-property-configuration.adoc[]. Some properties require the cluster to be restarted in order to be applied; see a specific property's reference for whether restart is required.

== Cluster Configuration

=== abort_index_segment_size

Capacity (in number of txns) of an abort index segment.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `4294967295`]

*Default:* `50000`

---

=== abort_timed_out_transactions_interval_ms

How often look for the inactive transactions and abort them.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `10s`

---

=== admin_api_require_auth

Whether admin API clients must provide HTTP Basic authentication headers.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `false`

---

=== aggregate_metrics

Enable aggregations of metrics returned by the prometheus '/metrics' endpoint. Metric aggregation is performed by summing the values of samples by labels. Aggregations are performed where it makes sense by the shard and/or partition labels.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `false`

---

=== alive_timeout_ms

Time from the last node status heartbeat after which a node will be considered offline and not alive.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `5s`

---

=== alter_topic_cfg_timeout_ms

Time to wait for entries replication in controller log when executing alter configuration request.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `5s`

---

=== append_chunk_size

Size of direct write operations to disk in bytes.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `16384`

---

=== audit_client_max_buffer_size

Maximum number of bytes the internal audit client will allocate for audit log records. Disable and re-enable auditing for changes to take affect.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Default:* `16777216`

---

=== audit_enabled

Enable/Disable audit logging.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `false`

---

=== audit_enabled_event_types

List of event classes that will be audited, options are: [management, produce, consume, describe, heartbeat, authenticate, admin, schema_registry]. Please refer to the documentation to know exactly which request(s) map to a particular audit event type.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* array

*Default:* `[management, authenticate, admin]`

---

=== audit_excluded_principals

List of user principals to exclude from auditing.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* array

*Default:* `null`

---

=== audit_excluded_topics

List of topics to exclude from auditing.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* array

*Default:* `null`

---

=== audit_log_num_partitions

Number of partitions for the internal audit log topic. Attempt to create topic is only performed if it doesn't already exist, disable and re-enable auditing for changes to take affect.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-2147483648`, `2147483647`]

*Default:* `12`

---

=== audit_log_replication_factor

Replication factor of the internal audit log topic. Attempt to create topic is only performed if it doesn't already exist, disable and re-enable auditing for changes to take affect.  If unset, defaults to `default_topic_replication`.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-32768`, `32767`]

*Default:* `null`

---

=== audit_queue_drain_interval_ms

Frequency in which per shard audit logs are batched to client for write to audit log. Longer intervals allow for greater change for coalescing duplicates (great for high throughput auditing scenarios) but increase the risk of data loss during hard shutdowns.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `500ms`

---

=== audit_queue_max_buffer_size_per_shard

Maximum amount of memory allowed in the audit buffer per shard Once this value is reached, any request handlers that cannot enqueue audit messages will return a non retryable error to the client. Note that this only will occur when handling requests that are currently enabled for auditing.

*Requires Restart:* Yes

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `1048576`

---

=== auto_create_topics_enabled

Allow topic auto creation.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `false`

---

=== cluster_id

Cluster identifier.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* string

*Default:* `null`

---

=== compacted_log_segment_size

How large in bytes should each compacted log segment be (default 256MiB).

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `18446744073709551615`]

*Default:* `268435456`

---

=== compaction_ctrl_backlog_size

Target backlog size for compaction controller. if not set compaction target compaction backlog would be equal to .

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `tunable`

*Type:* integer

*Default:* `null`

---

=== compaction_ctrl_d_coeff

Derivative coefficient for compaction PID controller.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* number

*Default:* `0.2`

---

=== compaction_ctrl_i_coeff

Integral coefficient for compaction PID controller.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* number

*Default:* `0.0`

---

=== compaction_ctrl_max_shares

Maximum number of IO and CPU shares that compaction process can use.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-32768`, `32767`]

*Default:* `1000`

---

=== compaction_ctrl_min_shares

Minimum number of IO and CPU shares that compaction process can use.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-32768`, `32767`]

*Default:* `10`

---

=== compaction_ctrl_p_coeff

Proportional coefficient for compaction PID controller. This has to be negative since compaction backlog should decrease when number of compaction shares increases.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* number

*Default:* `-12.5`

---

=== controller_backend_housekeeping_interval_ms

Interval between iterations of controller backend housekeeping loop.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `1s`

---

=== controller_log_accummulation_rps_capacity_acls_and_users_operations

Maximum capacity of rate limit accumulationin controller acls and users operations limit.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `tunable`

*Type:* integer

*Default:* `null`

---

=== controller_log_accummulation_rps_capacity_configuration_operations

Maximum capacity of rate limit accumulationin controller configuration operations limit.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `tunable`

*Type:* integer

*Default:* `null`

---

=== controller_log_accummulation_rps_capacity_move_operations

Maximum capacity of rate limit accumulationin controller move operations limit.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `tunable`

*Type:* integer

*Default:* `null`

---

=== controller_log_accummulation_rps_capacity_node_management_operations

Maximum capacity of rate limit accumulationin controller node management operations limit.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `tunable`

*Type:* integer

*Default:* `null`

---

=== controller_log_accummulation_rps_capacity_topic_operations

Maximum capacity of rate limit accumulationin controller topic operations limit.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `tunable`

*Type:* integer

*Default:* `null`

---

=== controller_snapshot_max_age_sec

Max time that will pass before we make an attempt to create a controller snapshot, after a new controller command appears.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17179869184`, `17179869183`]

*Default:* `60s`

---

=== core_balancing_continuous

If set to 'true', move partitions between cores in runtime to maintain balanced partition distribution.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `false`

---

=== core_balancing_debounce_timeout

Interval, in milliseconds, between trigger and invocation of core balancing.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `10s`

---

=== core_balancing_on_core_count_change

If set to 'true', and if after a restart the number of cores changes, Redpanda will move partitions between cores to maintain balanced partition distribution.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `true`

---

=== cpu_profiler_enabled

Enables cpu profiling for Redpanda.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `false`

---

=== cpu_profiler_sample_period_ms

The sample period for the CPU profiler.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `100ms`

---

=== create_topic_timeout_ms

Timeout (ms) to wait for new topic creation.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `2000ms`

---

=== data_transforms_binary_max_size

The maximum size for a deployable WebAssembly binary that the broker can store.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `10485760`

---

=== data_transforms_commit_interval_ms

The interval at which Data Transforms commits progress.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `3s`

---

=== data_transforms_enabled

Enables WebAssembly powered Data Transforms directly in the broker.

*Requires Restart:* Yes

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `false`

---

=== data_transforms_logging_buffer_capacity_bytes

Buffer capacity for transform logs, per shard. Buffer occupancy is calculated as the total size of buffered (i.e. emitted but not yet produced) log messages.

*Requires Restart:* Yes

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `512000`

---

=== data_transforms_logging_flush_interval_ms

Flush interval for transform logs. When a timer expires, pending logs are collected and published to the transform_logs topic.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `500ms`

---

=== data_transforms_logging_line_max_bytes

Transform log lines will be truncate to this length. Truncation occurs after any character escaping.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `1024`

---

=== data_transforms_per_core_memory_reservation

The amount of memory to reserve per core for Data Transform WebAssembly Virtual Machines. Memory is reserved on boot. The maximum number of functions that can be deployed to a cluster is equal to data_transforms_per_core_memory_reservation / data_transforms_per_function_memory_limit.

*Requires Restart:* Yes

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Default:* `20971520`

---

=== data_transforms_per_function_memory_limit

The amount of memory to give an instance of a Data Transform WebAssembly Virtual Machine. The maximum number of functions that can be deployed to a cluster is equal to data_transforms_per_core_memory_reservation / data_transforms_per_function_memory_limit.

*Requires Restart:* Yes

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Default:* `2097152`

---

=== data_transforms_read_buffer_memory_percentage

The percentage of available memory in the transform subsystem to use for read buffers.

*Requires Restart:* Yes

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `45`

---

=== data_transforms_runtime_limit_ms

The maximum amount of runtime for startup time of a data transform, and the time it takes for a single record to be transformed.

*Requires Restart:* Yes

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `3s`

---

=== data_transforms_write_buffer_memory_percentage

The percentage of available memory in the transform subsystem to use for write buffers.

*Requires Restart:* Yes

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `45`

---

=== debug_load_slice_warning_depth

The recursion depth after which debug logging will be enabled automatically for the log reader.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `4294967295`]

*Default:* `null`

---

=== default_num_windows

Default number of quota tracking windows.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-32768`, `32767`]

*Default:* `10`

---

=== default_topic_partitions

Default number of partitions per topic.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-2147483648`, `2147483647`]

*Default:* `1`

---

=== default_topic_replication

Default replication factor for new topics.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-32768`, `32767`]

*Default:* `1`

---

=== default_window_sec

Default quota tracking window size in milliseconds.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `std::chrono::milliseconds(1000)`

---

=== disable_batch_cache

Disable batch cache in log manager.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* boolean

*Default:* `false`

---

=== disable_cluster_recovery_loop_for_tests

Disables the cluster recovery loop. The property exists to simplify testing and shouldn't be set in production.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* boolean

*Default:* `false`

---

=== disable_metrics

Disable registering metrics exposed on the internal metrics endpoint (/metrics).

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `false`

---

=== disable_public_metrics

Disable registering metrics exposed on the public metrics endpoint (/public_metrics).

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `false`

---

=== disk_reservation_percent

The percentage of total disk capacity that Redpanda will avoid using. This applies both when cloud cache and log data share a disk, as well as when cloud cache uses a dedicated disk. It is recommended to not run disks near capacity to avoid blocking I/O due to low disk space, as well as avoiding performance issues associated with SSD garbage collection.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* number

*Default:* `25.0`

---

=== enable_cluster_metadata_upload_loop

Enables the cluster metadata upload loop.

*Requires Restart:* Yes

*Nullable:* No

*Visibility:* `tunable`

*Type:* boolean

*Default:* `true`

---

=== enable_controller_log_rate_limiting

Enables limiting of controller log write rate.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `false`

---

=== enable_idempotence

Enable idempotent producer.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `true`

---

=== enable_leader_balancer

Enable automatic leadership rebalancing.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `true`

---

=== enable_metrics_reporter

Enable cluster metrics reporter.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `true`

---

=== enable_mpx_extensions

Enable Redpanda extensions for MPX.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* boolean

*Default:* `false`

---

=== enable_pid_file

Enable pid file. You probably don't want to change this.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* boolean

*Default:* `true`

---

=== enable_rack_awareness

Enables rack-aware replica assignment.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `false`

---

=== enable_sasl

Enable SASL authentication for Kafka connections, authorization is required. see also `kafka_enable_authorization`.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `false`

---

=== enable_schema_id_validation

Enable Server Side Schema ID Validation.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Default:* `pandaproxy::schema_registry::schema_id_validation_mode::none`

---

=== enable_transactions

Enable transactions.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `true`

---

=== enable_usage

Enables the usage tracking mechanism, storing windowed history of kafka/cloud_storage metrics over time.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `false`

---

=== features_auto_enable

Whether new feature flags may auto-activate after upgrades (true) or must wait for manual activation via the admin API (false).

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* boolean

*Default:* `true`

---

=== fetch_max_bytes

Maximum number of bytes returned in fetch request.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Default:* `57671680`

---

=== fetch_read_strategy

The strategy used to fulfill fetch requests.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Default:* `model::fetch_read_strategy::non_polling`

---

=== fetch_reads_debounce_timeout

Time to wait for next read in fetch request when requested min bytes wasn't reached.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `1ms`

---

=== fetch_session_eviction_timeout_ms

Minimum time before which unused session will get evicted from sessions. Maximum time after which inactive session will be deleted is two time given configuration valuecache.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `60s`

---

=== group_initial_rebalance_delay

Extra delay (ms) added to rebalance phase to wait for new members.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `3s`

---

=== group_max_session_timeout_ms

The maximum allowed session timeout for registered consumers. Longer timeouts give consumers more time to process messages in between heartbeats at the cost of a longer time to detect failures. .

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `300s`

---

=== group_min_session_timeout_ms

The minimum allowed session timeout for registered consumers. Shorter timeouts result in quicker failure detection at the cost of more frequent consumer heartbeating, which can overwhelm broker resources.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `6000ms`

---

=== group_new_member_join_timeout

Timeout for new member joins.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `30000ms`

---

=== group_offset_retention_check_ms

How often the system should check for expired group offsets.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `10min`

---

=== group_offset_retention_sec

Consumer group offset retention seconds. Offset retention can be disabled by setting this value to null.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17179869184`, `17179869183`]

*Default:* `24h * 7`

---

=== group_topic_partitions

Number of partitions in the internal group membership topic.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-2147483648`, `2147483647`]

*Default:* `16`

---

=== health_manager_tick_interval

How often the health manager runs.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `3min`

---

=== health_monitor_max_metadata_age

Max age of metadata cached in the health monitor of non controller node.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `10s`

---

=== http_authentication

A list of supported HTTP authentication mechanisms. `BASIC` and `OIDC` are allowed.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* array

*Default:* `[basic]`

---

=== id_allocator_batch_size

Id allocator allocates messages in batches (each batch is a one log record) and then serves requests from memory without touching the log until the batch is exhausted.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-32768`, `32767`]

*Default:* `1000`

---

=== id_allocator_log_capacity

Capacity of the id_allocator log in number of batches. Once it reached id_allocator_stm truncates log's prefix.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-32768`, `32767`]

*Default:* `100`

---

=== initial_retention_local_target_bytes_default

Initial local retention size target for partitions of topics with cloud storage write enabled. If no initial local target retention is configured all locally retained data will be delivered to learner when joining partition replica set.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* integer

*Default:* `null`

---

=== initial_retention_local_target_ms_default

Initial local retention time target for partitions of topics with cloud storage write enabled. If no initial local target retention is configured all locally retained data will be delivered to learner when joining partition replica set.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `null`

---

=== internal_topic_replication_factor

Target replication factor for internal topics.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-2147483648`, `2147483647`]

*Default:* `3`

---

=== join_retry_timeout_ms

Time between cluster join retries in milliseconds.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `5s`

---

=== kafka_admin_topic_api_rate

Target quota rate (partition mutations per default_window_sec).

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`0`, `4294967295`]

*Default:* `null`

---

=== kafka_batch_max_bytes

Maximum size of a batch processed by server. If batch is compressed the limit applies to compressed batch size.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `4294967295`]

*Default:* `1048576`

---

=== kafka_client_group_byte_rate_quota

Per-group target produce quota byte rate (bytes per second). Client is considered part of the group if client_id contains clients_prefix.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Default:* `null`

---

=== kafka_client_group_fetch_byte_rate_quota

Per-group target fetch quota byte rate (bytes per second). Client is considered part of the group if client_id contains clients_prefix.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Default:* `null`

---

=== kafka_connection_rate_limit

Maximum connections per second for one core.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-9223372036854775808`, `9223372036854775807`]

*Default:* `null`

---

=== kafka_connection_rate_limit_overrides

Overrides for specific ips for maximum connections per second for one core.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* array

*Default:* `null`

---

=== kafka_connections_max

Maximum number of Kafka client connections per broker.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`0`, `4294967295`]

*Default:* `null`

---

=== kafka_connections_max_overrides

Per-IP overrides of kafka connection count limit, list of <ip>:<count> strings.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* array

*Default:* `null`

---

=== kafka_connections_max_per_ip

Maximum number of Kafka client connections from each IP address, per broker.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`0`, `4294967295`]

*Default:* `null`

---

=== kafka_enable_authorization

Enable authorization for Kafka connections. Values:- `nil`: Ignored. Authorization is enabled with `enable_sasl: true`; `true`: authorization is required; `false`: authorization is disabled. See also: `enable_sasl` and `kafka_api[].authentication_method`.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* boolean

*Default:* `null`

---

=== kafka_enable_describe_log_dirs_remote_storage

Whether to include tiered storage as a special remote:// directory in DescribeLogDirs Kafka API requests.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `true`

---

=== kafka_enable_partition_reassignment

Enable the Kafka partition reassignment API.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `true`

---

=== kafka_group_recovery_timeout_ms

Kafka group recovery timeout expressed in milliseconds.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `30000ms`

---

=== kafka_max_bytes_per_fetch

Limit fetch responses to this many bytes, even if total of partition bytes limits is higher.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `67108864`

---

=== kafka_memory_batch_size_estimate_for_fetch

The size of the batch used to estimate memory consumption for Fetch requests, in bytes. Smaller sizes allow more concurrent fetch requests per shard, larger sizes prevent running out of memory because of too many concurrent fetch requests.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Default:* `1048576`

---

=== kafka_memory_share_for_fetch

The share of kafka subsystem memory that can be used for fetch read buffers, as a fraction of kafka subsystem memory amount.

*Requires Restart:* Yes

*Nullable:* No

*Visibility:* `user`

*Type:* number

*Default:* `0.5`

---

=== kafka_mtls_principal_mapping_rules

Principal Mapping Rules for mTLS Authentication on the Kafka API.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* array

*Default:* `null`

---

=== kafka_nodelete_topics

Prevents the topics in the list from being deleted via the kafka api.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* array

*Default:* `{model::kafka_audit_logging_topic(), "__consumer_offsets", "_schemas"}`

---

=== kafka_noproduce_topics

Prevents the topics in the list from having message produced to them via the kafka api.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* array

*Default:* `null`

---

=== kafka_qdc_depth_alpha

Smoothing factor for kafka queue depth control depth tracking.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* number

*Default:* `0.8`

---

=== kafka_qdc_depth_update_ms

Update frequency for kafka queue depth control.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `7s`

---

=== kafka_qdc_enable

Enable kafka queue depth control.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `false`

---

=== kafka_qdc_idle_depth

Queue depth when idleness is detected in kafka queue depth control.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `10`

---

=== kafka_qdc_latency_alpha

Smoothing parameter for kafka queue depth control latency tracking.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* number

*Default:* `0.002`

---

=== kafka_qdc_max_depth

Maximum queue depth used in kafka queue depth control.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `100`

---

=== kafka_qdc_max_latency_ms

Max latency threshold for kafka queue depth control depth tracking.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `80ms`

---

=== kafka_qdc_min_depth

Minimum queue depth used in kafka queue depth control.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `1`

---

=== kafka_qdc_window_count

Number of windows used in kafka queue depth control latency tracking.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `12`

---

=== kafka_qdc_window_size_ms

Window size for kafka queue depth control latency tracking.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `1500ms`

---

=== kafka_quota_balancer_min_shard_throughput_bps

The lowest value of the throughput quota a shard can get in the process of quota balancing, in bytes/s. 0 means there is no minimum.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-9223372036854775808`, `9223372036854775807`]

*Default:* `256`

---

=== kafka_quota_balancer_min_shard_throughput_ratio

The lowest value of the throughput quota a shard can get in the process of quota balancing, expressed as a ratio of default shard quota. 0 means there is no minimum, 1 means no quota can be taken away by the balancer.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* number

*Default:* `0.01`

---

=== kafka_quota_balancer_node_period

Intra-node throughput quota balancer invocation period, in milliseconds. Value of 0 disables the balancer and makes all the throughput quotas immutable.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `0ms`

---

=== kafka_quota_balancer_window

Time window used to average current throughput measurement for quota balancer, in milliseconds.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `5000ms`

---

=== kafka_request_max_bytes

Maximum size of a single request processed via Kafka API.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `4294967295`]

*Default:* `104857600`

---

=== kafka_rpc_server_stream_recv_buf

Userspace receive buffer max size in bytes.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `tunable`

*Type:* integer

*Default:* `null`

---

=== kafka_rpc_server_tcp_recv_buf

Kafka server TCP receive buffer size in bytes.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-2147483648`, `2147483647`]

*Default:* `null`

---

=== kafka_rpc_server_tcp_send_buf

Kafka server TCP transmit buffer size in bytes.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-2147483648`, `2147483647`]

*Default:* `null`

---

=== kafka_sasl_max_reauth_ms

The maximum time between Kafka client reauthentications. If a client has not reauthenticated a connection within this time frame, that connection is torn down. Without this, a connection could live long after the client's credentials are expired or revoked. Session expiry is disabled if the value is null.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `null`

---

=== kafka_schema_id_validation_cache_capacity

Per-shard capacity of the cache for validating schema IDs.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `128`

---

=== kafka_tcp_keepalive_idle_timeout_seconds

TCP keepalive idle timeout in seconds for kafka connections. This describes the timeout between tcp keepalive probes that the remote sitesuccessfully acknowledged. Refers to the TCP_KEEPIDLE socket option. When changed applies to new connections only.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17179869184`, `17179869183`]

*Default:* `120s`

---

=== kafka_tcp_keepalive_probe_interval_seconds

TCP keepalive probe interval in seconds for kafka connections. This describes the timeout between unacknowledged tcp keepalives. Refers to the TCP_KEEPINTVL socket option. When changed applies to new connections only.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17179869184`, `17179869183`]

*Default:* `60s`

---

=== kafka_tcp_keepalive_probes

TCP keepalive unacknowledged probes until the connection is considered dead for kafka connections. Refers to the TCP_KEEPCNT socket option. When changed applies to new connections only.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `4294967295`]

*Default:* `3`

---

=== kafka_throughput_control

List of throughput control groups that define exclusions from node-wide throughput limits. Each group consists of: ("name" (optional) - any unique group name, "client_id" - regex to match client_id). A connection is assigned the first matching group, then the connection is excluded from throughput control.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* array

*Default:* `null`

---

=== kafka_throughput_controlled_api_keys

List of Kafka API keys that are subject to cluster-wide and node-wide throughput limit control.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* array

*Default:* `[produce, fetch]`

---

=== kafka_throughput_limit_node_in_bps

Node wide throughput ingress limit - maximum kafka traffic throughput allowed on the ingress side of each node, in bytes/s. Default is no limit.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-9223372036854775808`, `9223372036854775807`]

*Default:* `null`

---

=== kafka_throughput_limit_node_out_bps

Node wide throughput egress limit - maximum kafka traffic throughput allowed on the egress side of each node, in bytes/s. Default is no limit.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-9223372036854775808`, `9223372036854775807`]

*Default:* `null`

---

=== kafka_throughput_replenish_threshold

Threshold for refilling the token bucket. Will be clamped between 1 and kafka_throughput_limit_node_*_bps.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-9223372036854775808`, `9223372036854775807`]

*Default:* `null`

---

=== kafka_throughput_throttling_v2

Use throughput throttling based on a shared token bucket instead of balancing quota between shards.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* boolean

*Default:* `true`

---

=== kvstore_flush_interval

Key-value store flush interval (ms).

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `std::chrono::milliseconds(10)`

---

=== kvstore_max_segment_size

Key-value maximum segment size (bytes).

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `16777216`

---

=== leader_balancer_idle_timeout

Leadership rebalancing idle timeout.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `2min`

---

=== leader_balancer_mode

Leader balancer mode.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Default:* `model::leader_balancer_mode::random_hill_climbing`

---

=== leader_balancer_mute_timeout

Leadership rebalancing mute timeout.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `5min`

---

=== leader_balancer_node_mute_timeout

Leadership rebalancing node mute timeout.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `20s`

---

=== leader_balancer_transfer_limit_per_shard

Per shard limit for in progress leadership transfers.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `512`

---

=== legacy_group_offset_retention_enabled

Group offset retention is enabled by default in versions of Redpanda >= 23.1. To enable offset retention after upgrading from an older version set this option to true.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* boolean

*Default:* `false`

---

=== legacy_permit_unsafe_log_operation

Permits the use of strings that may induct log injection/modification.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `true`

---

=== legacy_unsafe_log_warning_interval_sec

Interval, in seconds, of how often a message informing the operator that unsafe strings are permitted.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-17179869184`, `17179869183`]

*Default:* `300s`

---

=== log_cleanup_policy

Default topic cleanup policy.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Default:* `model::cleanup_policy_bitflags::deletion`

---

=== log_compaction_interval_ms

How often do we trigger background compaction.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `10s`

---

=== log_compaction_use_sliding_window

Use sliding window compaction.

*Requires Restart:* Yes

*Nullable:* No

*Visibility:* `tunable`

*Type:* boolean

*Default:* `true`

---

=== log_compression_type

Default topic compression type.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Default:* `model::compression::producer`

---

=== log_disable_housekeeping_for_tests

Disables the housekeeping loop for local storage. The property exists to simplify testing and shouldn't be set in production.

*Requires Restart:* Yes

*Nullable:* No

*Visibility:* `tunable`

*Type:* boolean

*Default:* `false`

---

=== log_message_timestamp_alert_after_ms

Threshold in milliseconds for alerting on messages with a timestamp after the broker's time, meaning they are in the future relative to the broker's clock.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `2h`

---

=== log_message_timestamp_alert_before_ms

Threshold in milliseconds for alerting on messages with a timestamp before the broker's time, meaning they are in the past relative to the broker's clock. null to disable this check.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `null`

---

=== log_message_timestamp_type

Default topic messages timestamp type.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Default:* `model::timestamp_type::create_time`

---

=== log_retention_ms

Delete segments older than this - default 1 week.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Default:* `7 * 24h`

---

=== log_segment_ms

Default log segment lifetime in ms for topics which do not set segment.ms.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `std::chrono::weeks{2}`

---

=== log_segment_ms_max

Upper bound on topic segment.ms: higher values will be clamped to this value.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `24h * 365`

---

=== log_segment_ms_min

Lower bound on topic segment.ms: lower values will be clamped to this value.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `10min`

---

=== log_segment_size

Default log segment size in bytes for topics which do not set segment.bytes.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `18446744073709551615`]

*Default:* `134217728`

---

=== log_segment_size_jitter_percent

Random variation to the segment size limit used for each partition.

*Requires Restart:* Yes

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `65535`]

*Default:* `5`

---

=== log_segment_size_max

Upper bound on topic segment.bytes: higher values will be clamped to this limit.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `18446744073709551615`]

*Default:* `null`

---

=== log_segment_size_min

Lower bound on topic segment.bytes: lower values will be clamped to this limit.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `18446744073709551615`]

*Default:* `1048576`

---

=== lz4_decompress_reusable_buffers_disabled

Disable reusable preallocated buffers for LZ4 decompression.

*Requires Restart:* Yes

*Nullable:* No

*Visibility:* `tunable`

*Type:* boolean

*Default:* `false`

---

=== max_compacted_log_segment_size

Max compacted segment size after consolidation.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `5368709120`

---

=== max_concurrent_producer_ids

Max number of the active sessions (producers). When the threshold is passed Redpanda terminates old sessions. When an idle producer corresponding to the terminated session wakes up and produces - it leads to its batches being rejected with out of order sequence error.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `18446744073709551615`]

*Default:* `std::numeric_limits<uint64_t>::max()`

---

=== max_in_flight_pandaproxy_requests_per_shard

Maximum number of in flight HTTP requests permitted in pandaproxy per shard.  Any additional requests above this limit will be rejected with a 429 error.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `500`

---

=== max_in_flight_schema_registry_requests_per_shard

Maximum number of in flight HTTP requests permitted in schema registry per shard.  Any additional requests above this limit will be rejected with a 429 error.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `500`

---

=== max_kafka_throttle_delay_ms

Fail-safe maximum throttle delay on kafka requests.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `30000ms`

---

=== max_transactions_per_coordinator

Max number of the active txn sessions (producers). When the threshold is passed Redpanda terminates old sessions. When an idle producer corresponding to the terminated session wakes up and produces - it leads to its batches being rejected with invalid producer epoch or invalid_producer_id_mapping (it depends on the txn execution phase).

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `18446744073709551615`]

*Default:* `std::numeric_limits<uint64_t>::max()`

---

=== members_backend_retry_ms

Time between members backend reconciliation loop retries .

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `5s`

---

=== memory_abort_on_alloc_failure

If true, the redpanda process will terminate immediately when an allocation cannot be satisfied due to memory exhaustion. If false, an exception is thrown instead.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* boolean

*Default:* `true`

---

=== metadata_dissemination_interval_ms

Interval for metadata dissemination batching.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `3000ms`

---

=== metadata_dissemination_retries

Number of attempts of looking up a topic's meta data like shard before failing a request.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-32768`, `32767`]

*Default:* `30`

---

=== metadata_dissemination_retry_delay_ms

Delay before retry a topic lookup in a shard or other meta tables.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `0500ms`

---

=== metadata_status_wait_timeout_ms

Maximum time to wait in metadata request for cluster health to be refreshed.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `2s`

---

=== metrics_reporter_report_interval

Cluster metrics reporter report interval.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `24h`

---

=== metrics_reporter_tick_interval

Cluster metrics reporter tick interval.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `1min`

---

=== metrics_reporter_url

Cluster metrics reporter url.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* string

*Default:* `https://m.rp.vectorized.io/v2`

---

=== minimum_topic_replication

Minimum permitted value of replication factor for new topics.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-32768`, `32767`]

*Default:* `1`

---

=== node_isolation_heartbeat_timeout

How long after the last heartbeat request a node will wait before considering itself to be isolated.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-9223372036854775808`, `9223372036854775807`]

*Default:* `3000`

---

=== node_management_operation_timeout_ms

Timeout for executing node management operations.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `5s`

---

=== node_status_interval

Time interval between two node status messages. Node status messages establish liveness status outside of the Raft protocol.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `100ms`

---

=== node_status_reconnect_max_backoff_ms

Maximum backoff (in ms) to reconnect to an unresponsive peer during node status liveness checks.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `15s`

---

=== oidc_clock_skew_tolerance

The amount of seconds to allow for when validating the exp, nbf, and iat claims in the token.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-17179869184`, `17179869183`]

*Default:* `std::chrono::seconds{} * 30`

---

=== oidc_discovery_url

The URL pointing to the well-known discovery endpoint for the OIDC provider.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* string

*Default:* `https://auth.prd.cloud.redpanda.com/.well-known/openid-configuration`

---

=== oidc_keys_refresh_interval

The frequency of refreshing the JSON Web Keys (JWKS) used to validate access tokens.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-17179869184`, `17179869183`]

*Default:* `1h`

---

=== oidc_principal_mapping

Rule for mapping JWT Payload claim to a Redpanda User Principal.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* string

*Default:* `$.sub`

---

=== oidc_token_audience

A string representing the intended recipient of the token.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* string

*Default:* `redpanda`

---

=== partition_autobalancing_concurrent_moves

Number of partitions that can be reassigned at once.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `50`

---

=== partition_autobalancing_max_disk_usage_percent

Disk usage threshold that triggers moving partitions from the node.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`0`, `4294967295`]

*Default:* `80`

---

=== partition_autobalancing_min_size_threshold

Minimum size of partition that is going to be prioritized when rebalancing cluster due to disk size threshold being breached. By default this value is calculated automaticaly.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `tunable`

*Type:* integer

*Default:* `null`

---

=== partition_autobalancing_mode

Partition autobalancing mode.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Default:* `model::partition_autobalancing_mode::node_add`

---

=== partition_autobalancing_node_availability_timeout_sec

Node unavailability timeout that triggers moving partitions from the node.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-17179869184`, `17179869183`]

*Default:* `15min`

---

=== partition_autobalancing_tick_interval_ms

Partition autobalancer tick interval.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `30s`

---

=== partition_autobalancing_tick_moves_drop_threshold

If the number of scheduled tick moves drops by this ratio, a new tick is scheduled immediately. Valid values are (0, 1]. For example, with a value of 0.2 and 100 scheduled moves in a tick, a new tick is scheduled when the inprogress moves are < 80.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* number

*Default:* `0.2`

---

=== partition_autobalancing_topic_aware

If true, Redpanda will prioritize balancing topic-wise number of partitions on each node, as opposed to balancing the total number of partitions. This should give better balancing results if topics with diverse partition sizes and load profiles are present in the cluster.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `true`

---

=== partition_manager_shutdown_watchdog_timeout

A threshold value to detect partitions which shutdown might have been stuck. After this threshold a watchdog in partition manager will log information about partition shutdown not making progress.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `30s`

---

=== pp_sr_smp_max_non_local_requests

Maximum number of x-core requests pending in Panda Proxy and Schema Registry seastar::smp group.  (for more details look at `seastar::smp_service_group` documentation).

*Requires Restart:* Yes

*Nullable:* Yes

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `4294967295`]

*Default:* `null`

---

=== quota_manager_gc_sec

Quota manager GC frequency in milliseconds.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `std::chrono::milliseconds(30000)`

---

=== raft_election_timeout_ms

Election timeout expressed in milliseconds.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `1500ms`

---

=== raft_enable_longest_log_detection

Enables additional step in leader election where candidate is allowed to wait for all the replies from node it requested votes from. This may introduce a small delay when recovering from failure but will prevent truncation if any of the replicas has more data than the majority.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* boolean

*Default:* `true`

---

=== raft_enable_lw_heartbeat

Enables raft optimization of heartbeats.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* boolean

*Default:* `true`

---

=== raft_heartbeat_disconnect_failures

After how many failed heartbeats to forcibly close an unresponsive TCP connection.  Set to 0 to disable force disconnection.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `3`

---

=== raft_heartbeat_interval_ms

Milliseconds for raft leader heartbeats.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `std::chrono::milliseconds(150)`

---

=== raft_heartbeat_timeout_ms

Raft heartbeat RPC timeout.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `3s`

---

=== raft_io_timeout_ms

Raft I/O timeout.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `10000ms`

---

=== raft_learner_recovery_rate

Raft learner recovery rate limit in bytes per sec.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `104857600`

---

=== raft_max_concurrent_append_requests_per_follower

Maximum number of concurrent append entries requests sent by leader to one follower.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `4294967295`]

*Default:* `16`

---

=== raft_max_recovery_memory

Max memory that can be used for reads in raft recovery process by default 15% of total memory.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `tunable`

*Type:* integer

*Default:* `null`

---

=== raft_recovery_concurrency_per_shard

How many partitions may simultaneously recover data to a particular shard. This is limited to avoid overwhelming nodes when they come back online after an outage.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `64`

---

=== raft_recovery_default_read_size

Default size of read issued during raft follower recovery.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `524288`

---

=== raft_recovery_throttle_disable_dynamic_mode

Disables dynamic rate allocation in recovery throttle (advanced).

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* boolean

*Default:* `false`

---

=== raft_replica_max_flush_delay_ms

Maximum delay (in ms) between two subsequent flushes. After this delay, the log will be automatically force flushed.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `100ms`

---

=== raft_replica_max_pending_flush_bytes

Max not flushed bytes per partition. If configured threshold is reached log will automatically be flushed even though it wasn't explicitly requested.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `tunable`

*Type:* integer

*Default:* `262144`

---

=== raft_replicate_batch_window_size

Max size of requests cached for replication.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `1048576`

---

=== raft_smp_max_non_local_requests

Maximum number of x-core requests pending in Raft seastar::smp group. (for more details look at `seastar::smp_service_group` documentation).

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `4294967295`]

*Default:* `null`

---

=== raft_timeout_now_timeout_ms

Timeout for Raft's timeout_now RPC. This RPC is used to force a follower to dispatch a round of votes immediately.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `1s`

---

=== raft_transfer_leader_recovery_timeout_ms

Timeout waiting for follower recovery when transferring leadership.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `10s`

---

=== readers_cache_eviction_timeout_ms

Duration after which inactive readers will be evicted from cache.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `30s`

---

=== readers_cache_target_max_size

Maximum desired number of readers cached per ntp. This a soft limit, a number of readers in cache may temporary increase as cleanup is done in background.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `200`

---

=== reclaim_batch_cache_min_free

Free memory limit that will be kept by batch cache background reclaimer.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `67108864`

---

=== reclaim_growth_window

Length of time in which reclaim sizes grow.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `3000ms`

---

=== reclaim_max_size

Maximum batch cache reclaim size.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `4194304`

---

=== reclaim_min_size

Minimum batch cache reclaim size.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `131072`

---

=== reclaim_stable_window

Length of time above which growth is reset.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `10000ms`

---

=== recovery_append_timeout_ms

Timeout for append entries requests issued while updating stale follower.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `5s`

---

=== release_cache_on_segment_roll

Free cache when segments roll.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* boolean

*Default:* `false`

---

=== replicate_append_timeout_ms

Timeout for append entries requests issued while replicating entries.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `3s`

---

=== retention_bytes

Default max bytes per partition on disk before triggering a compaction.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* integer

*Default:* `null`

---

=== retention_local_strict

Trim log data when a cloud topic reaches its local retention limit. When this option is disabled Redpanda will allow partitions to grow past the local retention limit, and will be trimmed automatically as storage reaches the configured target size.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `false`

---

=== retention_local_strict_override

Trim log data when a cloud topic reaches its local retention limit. When this option is disabled Redpanda will allow partitions to grow past the local retention limit, and will be trimmed automatically as storage reaches the configured target size.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `true`

---

=== retention_local_target_bytes_default

Local retention size target for partitions of topics with cloud storage write enabled.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* integer

*Default:* `null`

---

=== retention_local_target_capacity_bytes

The target capacity in bytes that log storage will try to use before additional retention rules will take over to trim data in order to meet the target. When no target is specified storage usage is unbounded.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`0`, `18446744073709551615`]

*Default:* `null`

---

=== retention_local_target_capacity_percent

The target capacity in percent of unreserved space (see disk_reservation_percent) that log storage will try to use before additional retention rules will take over to trim data in order to meet the target. When no target is specified storage usage is unbounded.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* number

*Default:* `80.0`

---

=== retention_local_target_ms_default

Local retention time target for partitions of topics with cloud storage write enabled.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `24h`

---

=== retention_local_trim_interval

The maximum amount of time before log storage will examine usage to determine of the target capacity has been exceeded and additional data trimming is required.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `30s`

---

=== retention_local_trim_overage_coeff

The space management control loop will reclaim the overage multiplied by this this coefficient in order to compensate for data that is written during the idle period between control loop invocations.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* number

*Default:* `2.0`

---

=== rm_sync_timeout_ms

Time to wait state catch up before rejecting a request.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `10s`

---

=== rpc_client_connections_per_peer

The maximum number of connections a broker will open to each of its peers.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-2147483648`, `2147483647`]

*Default:* `32`

---

=== rpc_server_compress_replies

Enable compression for internal rpc server replies.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* boolean

*Default:* `false`

---

=== rpc_server_listen_backlog

TCP connection queue length for Kafka server and internal RPC server.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-2147483648`, `2147483647`]

*Default:* `null`

---

=== rpc_server_tcp_recv_buf

Internal RPC TCP receive buffer size in bytes.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-2147483648`, `2147483647`]

*Default:* `null`

---

=== rpc_server_tcp_send_buf

Internal RPC TCP transmit buffer size in bytes.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-2147483648`, `2147483647`]

*Default:* `null`

---

=== rps_limit_acls_and_users_operations

Rate limit for controller acls and users operations.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `1000`

---

=== rps_limit_configuration_operations

Rate limit for controller configuration operations.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `1000`

---

=== rps_limit_move_operations

Rate limit for controller move operations.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `1000`

---

=== rps_limit_node_management_operations

Rate limit for controller node management operations.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `1000`

---

=== rps_limit_topic_operations

Rate limit for controller topic operations.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `1000`

---

=== sampled_memory_profile

If true, memory allocations will be sampled and tracked. A sampled live set of allocations can then be retrieved from the Admin API. Additionally, we will periodically log the top-n allocation sites.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* boolean

*Default:* `true`

---

=== sasl_kerberos_config

The location of the Kerberos krb5.conf file for Redpanda.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* string

*Default:* `/etc/krb5.conf`

---

=== sasl_kerberos_keytab

The location of the Kerberos keytab file for Redpanda.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* string

*Default:* `/var/lib/redpanda/redpanda.keytab`

---

=== sasl_kerberos_principal

The primary of the Kerberos Service Principal Name (SPN) for Redpanda.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* string

*Default:* `redpanda`

---

=== sasl_kerberos_principal_mapping

Rules for mapping Kerberos Principal Names to Redpanda User Principals.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* array

*Default:* `[default]`

---

=== sasl_mechanisms

A list of supported SASL mechanisms. `SCRAM`, `GSSAPI`, and `OAUTHBEARER` are allowed.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* array

*Default:* `[scram]`

---

=== schema_registry_normalize_on_startup

Normalize schemas as they are read from the topic on startup.

*Requires Restart:* Yes

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `false`

---

=== segment_appender_flush_timeout_ms

Maximum delay until buffered data is written.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `std::chrono::milliseconds(1s)`

---

=== segment_fallocation_step

Size for segments fallocation.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `33554432`

---

=== space_management_enable

Enable automatic space management.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `true`

---

=== space_management_enable_override

Enable automatic space management. This option is ignored and deprecated in versions >= v23.3.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `false`

---

=== space_management_max_log_concurrency

Maximum parallel logs inspected during space management process.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `65535`]

*Default:* `20`

---

=== space_management_max_segment_concurrency

Maximum parallel segments inspected during space management process.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `65535`]

*Default:* `10`

---

=== storage_compaction_index_memory

Maximum number of bytes that may be used on each shard by compactionindex writers.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `18446744073709551615`]

*Default:* `134217728`

---

=== storage_compaction_key_map_memory

Maximum number of bytes that may be used on each shard by compaction key-offset maps. Only respected when `log_compaction_use_sliding_window` is true.

*Requires Restart:* Yes

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `18446744073709551615`]

*Default:* `134217728`

---

=== storage_compaction_key_map_memory_limit_percent

Limit on `storage_compaction_key_map_memory`, expressed as a percentage of memory per shard, that bounds the amount of memory used by compaction key-offset maps. NOTE: Memory per shard is computed after `wasm_per_core_memory_reservation`. Only respected when `log_compaction_use_sliding_window` is true.

*Requires Restart:* Yes

*Nullable:* No

*Visibility:* `tunable`

*Type:* number

*Default:* `12.0`

---

=== storage_ignore_cstore_hints

If set, cstore hints will be ignored and will not be used for data access (but will otherwise be generated).

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* boolean

*Default:* `false`

---

=== storage_ignore_timestamps_in_future_sec

If set, timestamps more than this many seconds in the future relative tothe server's clock will be ignored for data retention purposes, and retention will act based on another timestamp in the same segment, or the mtime of the segment file if no valid timestamp is available.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17179869184`, `17179869183`]

*Default:* `null`

---

=== storage_max_concurrent_replay

Maximum number of partitions' logs that will be replayed concurrently at startup, or flushed concurrently on shutdown.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `18446744073709551615`]

*Default:* `1024`

---

=== storage_min_free_bytes

Threshold of minimum bytes free space before rejecting producers.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `5368709120`

---

=== storage_read_buffer_size

Size of each read buffer (one per in-flight read, per log segment).

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `131072`

---

=== storage_read_readahead_count

How many additional reads to issue ahead of current read location.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-32768`, `32767`]

*Default:* `10`

---

=== storage_reserve_min_segments

The number of segments per partition that the system will attempt to reserve disk capacity for. For example, if the maximum segment size is configured to be 100 MB, and the value of this option is 2, then in a system with 10 partitions Redpanda will attempt to reserve at least 2 GB of disk space.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-32768`, `32767`]

*Default:* `2`

---

=== storage_space_alert_free_threshold_bytes

Threshold of minimum bytes free space before setting storage space alert.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `0`

---

=== storage_space_alert_free_threshold_percent

Threshold of minimum percent free space before setting storage space alert.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `4294967295`]

*Default:* `5`

---

=== storage_strict_data_init

Requires that an empty file named `.redpanda_data_dir` be present in the data directory. Redpanda will refuse to start if it is not found.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `false`

---

=== storage_target_replay_bytes

Target bytes to replay from disk on startup after clean shutdown: controls frequency of snapshots and checkpoints.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `18446744073709551615`]

*Default:* `10737418240`

---

=== superusers

List of superuser usernames.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* string

*Default:* `null`

---

=== target_fetch_quota_byte_rate

Target fetch size quota byte rate (bytes per second) - disabled default.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`0`, `4294967295`]

*Default:* `null`

---

=== target_quota_byte_rate

Target request size quota byte rate (bytes per second).

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`0`, `4294967295`]

*Default:* `target_produce_quota_byte_rate_default`

---

=== tls_min_version

The minimum TLS version that Redpanda supports.

*Requires Restart:* Yes

*Nullable:* No

*Visibility:* `user`

*Default:* `tls_version::v1_2`

---

=== tm_sync_timeout_ms

Time to wait state catch up before rejecting a request.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `10s`

---

=== topic_fds_per_partition

Required file handles per partition when creating topics.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-2147483648`, `2147483647`]

*Default:* `5`

---

=== topic_memory_per_partition

Required memory per partition when creating topics.

*Requires Restart:* No

*Nullable:* Yes

*Visibility:* `tunable`

*Type:* integer

*Default:* `4194304`

---

=== topic_partitions_per_shard

Maximum number of partitions which may be allocated to one shard (CPU core).

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `4294967295`]

*Default:* `1000`

---

=== topic_partitions_reserve_shard0

Reserved partition slots on shard (CPU core) 0 on each node.  If this is >= topic_partitions_per_shard, no data partitions will be scheduled on shard 0.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `4294967295`]

*Default:* `0`

---

=== transaction_coordinator_cleanup_policy

Cleanup policy for a transaction coordinator topic.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Default:* `model::cleanup_policy_bitflags::deletion`

---

=== transaction_coordinator_delete_retention_ms

Delete segments older than this - default 1 week.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `10080min`

---

=== transaction_coordinator_log_segment_size

How large in bytes should each log segment be (default 1G).

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `18446744073709551615`]

*Default:* `1073741824`

---

=== transaction_coordinator_partitions

Amount of partitions for transactions coordinator.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-2147483648`, `2147483647`]

*Default:* `50`

---

=== transaction_max_timeout_ms

The maximum allowed timeout for transactions. If a client requested transaction timeout exceeds this configuration, the broker will return an error during transactional producer initialization. This guardrail prevents hanging transactions from blocking consumer progress.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `15min`

---

=== transactional_id_expiration_ms

Producer ids are expired once this time has elapsed after the last write with the given producer id.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `10080min`

---

=== tx_timeout_delay_ms

Delay before scheduling next check for timed out transactions.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `1000ms`

---

=== unsafe_enable_consumer_offsets_delete_retention

Enables delete retention of consumer offsets topic. This is an internal-only configuration and should be enabled only after consulting with Redpanda Support or engineers.

*Requires Restart:* Yes

*Nullable:* No

*Visibility:* `user`

*Type:* boolean

*Default:* `false`

---

=== usage_disk_persistance_interval_sec

The interval in which all usage stats are written to disk.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17179869184`, `17179869183`]

*Default:* `std::chrono::seconds(60 * 5)`

---

=== usage_num_windows

The number of windows to persist in memory and disk.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `24`

---

=== usage_window_width_interval_sec

The width of a usage window, tracking cloud and kafka ingress/egress traffic each interval.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17179869184`, `17179869183`]

*Default:* `std::chrono::seconds(3600)`

---

=== use_fetch_scheduler_group

Use a separate scheduler group for fetch processing.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* boolean

*Default:* `true`

---

=== virtual_cluster_min_producer_ids

Minimum number of active producers per virtual cluster.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`0`, `18446744073709551615`]

*Default:* `std::numeric_limits<uint64_t>::max()`

---

=== wait_for_leader_timeout_ms

Timeout (ms) to wait for leadership in metadata cache.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Accepted values:* [`-17592186044416`, `17592186044415`]

*Default:* `5000ms`

---

=== write_caching_default

Cache batches until the segment appender chunk is full instead of flushing for every acks=all write. This is the global default for all topics and can be overriden at a topic scope with property write.caching. 'disabled' mode takes precedence over topic overrides and disables the feature altogether for the entire cluster.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `user`

*Default:* `model::write_caching_mode::default_false`

---

=== zstd_decompress_workspace_bytes

Size of the zstd decompression workspace.

*Requires Restart:* No

*Nullable:* No

*Visibility:* `tunable`

*Type:* integer

*Default:* `8388608`

---

